# AegisForge_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MANIFEST.json  Makefile  README.md  SUBMISSION.md  VERSIONING.md  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  skillsbench_forensic_summary.json
.github/: dependabot.yml
amber/: amber-manifest-aegisforge-purple.json5  amber-manifest-officeqa-purple.json5
assets/: agent-card.example.json  submission_schema.json
data/: aegisforge_unified_purple_agent.db
docs/: ABSTRACT.md  architecture.md  fair_play.md  quickstart.md  release.md  repo_layout.md  submission.md
harness/: README.md
phaseB/: LAST_BASELINE_DIR.txt  LAST_CANDIDATE_DIR.txt  compare_latest_baseline_vs_candidate.json
scripts/: ablation_run.ps1  build_scorecard.py  check_a2a_e2e.ps1  check_a2a_e2e.sh  clean_repo.ps1  export_traces.ps1  prepare_aegisarena_purple_submission.ps1  prepare_crmarena_purple_submission.ps1  prepare_officeqa_purple_submission.ps1  prepare_openenv_purple_submission.ps1  prepare_submission.py  prepare_tau2_purple_submission.ps1  print_tree.py  record_provenance.py  regen_requirements.ps1  run_aegisarena_llm_solver.ps1  run_aegisarena_local_env.ps1  run_aegisarena_purple_eval.ps1  run_crmarena_purple_eval.ps1  run_heldouts.ps1  run_local_a2a.ps1  run_local_a2a.sh  run_mcu_purple_eval.ps1  run_officeqa_purple_eval.ps1  verify_repo.py  (+13 more)
tooling/A3_evaluator/: README.md  pyproject.toml
tooling/A3_evaluator/app/: server.py
(+771 files in other folders)
