[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisforge-agent"
version = "0.1.0"
description = "AegisForge Purple Agent (AgentX-AgentBeats Phase 2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "requests>=2.31",
  "a2a-sdk[http-server]",
  "uvicorn>=0.27",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
aegisforge-server = "aegisforge.a2a_server:main"
aegisforge-eval = "aegisforge_eval.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegisforge = [
  "prompts/core/*.md",
  "prompts/tracks/*.md",
  "prompts/contracts/*.md",
  "prompts/manifests/*.json",
]
aegisforge_eval = [
  "heldouts/suites/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
