[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a3-evaluator"
version = "0.1.0"
description = "Local evaluator tooling for AegisForge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.setuptools]
include-package-data = true
